--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+# db-connection
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.username=
+spring.datasource.password=
+
+# JPA / HIBERNATE
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
