--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 # db-connection
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.url=jdbc:h2:mem:;
 spring.datasource.username=
 spring.datasource.password=
 
