--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=
 # JPA / HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# SWAGGER
+springdoc.api-docs.path=/api-docs
