--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,11 @@ spring.datasource.password=
 
 # JPA / HIBERNATE
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
+
+#  http://docs.jboss.org/hibernate/orm/5.3/userguide/html_single/Hibernate_User_Guide.html#configurations
+spring.jpa.properties.hibernate.default_batch_fetch_size=20
 
 # SWAGGER
 springdoc.api-docs.path=/api-docs
