--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,43 @@
-
-# db-connection
+# H2 config
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-#spring.datasource.url=jdbc:h2:mem:;
-spring.datasource.username=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.platform=h2
+spring.datasource.initialization-mode=always
+
+# -----------------------------------------------------
+# DB connection properties
+
+# INMEMORY-DB PARAMS
+spring.datasource.url=jdbc:h2:mem:voting;
+spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.schema=classpath:db/inmemory/schema-h2.sql
+spring.datasource.data=classpath:db/inmemory/data-h2.sql
+# use tcp link to connect via DataGrip
+#    tcp: jdbc:h2:tcp://localhost:9092/mem:voting
+# -----------------------------------------------------
+
+# LOCAL-DB PARAMS
+#spring.datasource.schema=classpath:db/local_sql/schema_local.sql
+#spring.datasource.data=classpath:db/local_sql/data_local.sql
+#
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.username=
+#spring.datasource.password=
 
 # JPA / HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=update
 
+#  Initialize a Database Using JPA
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
 #  http://docs.jboss.org/hibernate/orm/5.3/userguide/html_single/Hibernate_User_Guide.html#configurations
 spring.jpa.properties.hibernate.default_batch_fetch_size=20
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+#spring.jpa.properties.hibernate.id.new_generator_mappings=false
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 # SWAGGER
 springdoc.api-docs.path=/api-docs
