--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>topjava-graduation</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>graduation</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Restaurant Voting REST API using Spring-Boot </description>
     <properties>
         <java.version>15</java.version>
     </properties>
