--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,8 @@ spring.jpa.properties.hibernate.jdbc.batch_size=20
 
 # SWAGGER
 springdoc.api-docs.path=/api-docs
+
+application-name=Restaurant Voting App
+application-description=@project.description@
+application-version=@project.version@
+springdoc.use-fqn=true
