--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>topjava-graduation</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>graduation</name>
-    <description>Restaurant Voting REST API using Spring-Boot </description>
+    <description>Restaurant Voting REST API using Spring-Boot</description>
     <properties>
         <java.version>15</java.version>
     </properties>
@@ -70,6 +70,12 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 
         <!--SWAGGER dependencies-->
         <dependency>
